--- a/frontend/src/app/modules/shared/components/button/button.component.scss
+++ b/frontend/src/app/modules/shared/components/button/button.component.scss
@@ -51,6 +51,14 @@
 
   &:hover, &.active {
     background-color: var(--contrast-lower);
+
+    &.primary {
+      background-color: rgba(var(--primary-2-rgb), 0.5);
+    }
+
+    &.warn {
+      background-color: rgba(var(--primary-1-rgb), 0.5);
+    }
   }
 
   &:focus {
