--- a/frontend/src/app/modules/admin/modules/fabrics/pages/create/create.page.scss
+++ b/frontend/src/app/modules/admin/modules/fabrics/pages/create/create.page.scss
@@ -6,9 +6,21 @@ h3 {
   text-align: center;
 }
 
+.image-edit-centering-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.image-edit-container {
+  width: 500px;
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+
 .create-fabric-form {
-  max-width: 500px;
-  margin: 0 auto;
   display: flex;
   flex-direction: column;
   gap: 12px;
@@ -73,4 +85,10 @@ h3 {
   display: flex;
   align-items: center;
   gap: 8px;
+}
+
+@media only screen and (max-width: 1000px) {
+  .image-edit-container {
+    width: 100%;
+  }
 }
