--- a/frontend/src/app/modules/admin/modules/fabrics/pages/details/details.page.scss
+++ b/frontend/src/app/modules/admin/modules/fabrics/pages/details/details.page.scss
@@ -7,8 +7,6 @@ h3 {
 }
 
 .container {
-  max-width: 500px;
-  margin: 0 auto;
   display: flex;
   flex-direction: column;
   gap: 12px;
@@ -16,6 +14,28 @@ h3 {
   input {
     width: 100%;
   }
+}
+
+.top-action-bar {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  gap: 12px;
+}
+
+.image-edit-centering-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.image-edit-container {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  width: 500px;
 }
 
 .created-at {
@@ -82,6 +102,15 @@ h3 {
         width: 100%;
       }
     }
+  }
+
+  .top-action-bar {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .image-edit-container {
+    width: 100%;
   }
 
   .form-group {
