--- a/frontend/src/app/modules/admin/modules/fabrics/pages/fabrics/fabrics.page.scss
+++ b/frontend/src/app/modules/admin/modules/fabrics/pages/fabrics/fabrics.page.scss
@@ -10,31 +10,13 @@
   margin-bottom: 8px;
 }
 
-ul.fabrics-list {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  display: flex;
-  flex-direction: column;
+table.fabrics-table {
+  width: 100%;
+  border-collapse: collapse;
 
-  li {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+  tr {
     cursor: pointer;
     border-bottom: 1px solid var(--background-low-contrast);
-    padding: 12px 16px;
-
-    .details {
-      display: flex;
-      flex-direction: column;
-      gap: 4px;
-
-      .created-at {
-        color: rgba(var(--text-rgb), 0.7);
-        font-size: 12px;
-      }
-    }
 
     &:hover {
       background-color: var(--background-low-contrast);
@@ -42,6 +24,43 @@ ul.fabrics-list {
 
     &:last-child {
       border-bottom: none;
+    }
+  }
+
+  td {
+    vertical-align: middle;
+    padding: 5px;
+
+    &.image-cell {
+      width: 70px;
+
+      & > img {
+        aspect-ratio: 1;
+        display: block;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+    }
+
+    &.details-cell {
+      .details {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        gap: 4px;
+
+        .created-at {
+          color: rgba(var(--text-rgb), 0.7);
+          font-size: 12px;
+        }
+      }
+    }
+
+    &.published-cell {
+      width: 50px;
+      text-align: center;
+      color: rgba(var(--text-rgb), 0.5);
     }
   }
 }
