--- a/frontend/src/app/modules/catalog/modules/fabrics/pages/fabrics/fabrics.page.html
+++ b/frontend/src/app/modules/catalog/modules/fabrics/pages/fabrics/fabrics.page.html
@@ -8,13 +8,19 @@
 
 @if (items$ | async; as items) {
   @if (items.length > 0) {
-    <app-card-list [items]="items" [template]="template"></app-card-list>
+    <div class="scroll-container"
+         infiniteScroll
+         (scrolled)="onScroll()">
+      <app-card-list [items]="items" [template]="template"></app-card-list>
+    </div>
   } @else {
     <div class="no-results-hint">
       <p>Es konnten keine Stoffe gefunden werden.</p>
     </div>
   }
 }
+
+<app-loading-bar [visible]="loading$ | async"></app-loading-bar>
 
 <ng-template #template let-item>
   <div class="repeated-fabric-image" [style.background-image]="'url(' + item.imageUrl + ')'"></div>
