Added color badges at various places

--- a/frontend/src/app/modules/admin/modules/fabrics/pages/create/create.page.html
+++ b/frontend/src/app/modules/admin/modules/fabrics/pages/create/create.page.html
@@ -75,7 +75,10 @@
                      (removed)="onColorRemoved($event)"
                      (added)="onColorAdded($event)">
             <ng-template let-chip>
-              {{ chip.label }}
+              <div class="color-chip">
+                <app-color-badge [color]="chip.content" size="20"></app-color-badge>
+                {{ chip.label }}
+              </div>
             </ng-template>
           </app-chips>
 
