--- a/frontend/src/app/modules/admin/modules/fabrics/pages/details/details.page.scss
+++ b/frontend/src/app/modules/admin/modules/fabrics/pages/details/details.page.scss
@@ -6,6 +6,13 @@ h3 {
   text-align: center;
 }
 
+.color-chip {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 8px;
+}
+
 .container {
   display: flex;
   flex-direction: column;
