--- a/frontend/src/app/modules/shared/modules/image-slider/components/thumbnail/thumbnail.component.html
+++ b/frontend/src/app/modules/shared/modules/image-slider/components/thumbnail/thumbnail.component.html
@@ -1,3 +1,3 @@
-@if (thumbnail$ | async; as thumbnail) {
-  <img [src]="thumbnail.image.url" [class.active]="thumbnail.active" draggable="false"/>
+@if (image$ | async; as image) {
+  <img [src]="image.url" [class.active]="active$ | async" draggable="false"/>
 }
