--- a/frontend/src/app/modules/shared/components/card-list/card-list.component.scss
+++ b/frontend/src/app/modules/shared/components/card-list/card-list.component.scss
@@ -6,15 +6,20 @@ ul.card-list {
   flex-wrap: wrap;
   column-gap: 5%;
   row-gap: 48px;
-  justify-content: center;
+  justify-content: flex-start;
+
+  a {
+    text-decoration: none;
+    color: inherit;
+    flex-basis: 30%;
+    cursor: pointer;
+  }
 
   li.card-list-item {
     display: flex;
     flex-direction: column;
     gap: 8px;
-    flex-basis: 30%;
     list-style: none;
-    cursor: pointer;
 
     .upper-content {
       line-height: 0;
@@ -22,7 +27,6 @@ ul.card-list {
       box-shadow: 0 6px 12px 0 rgba(var(--shadow-rgba));
       border-radius: 8px;
       width: 100%;
-      height: 100%;
     }
 
     .image {
@@ -71,7 +75,7 @@ ul.card-list {
   ul.card-list {
     column-gap: 6%;
 
-    li.card-list-item {
+    a {
       flex-basis: 47%;
       width: 47%;
     }
