Fixed filter indicator color

--- a/frontend/src/theme.scss
+++ b/frontend/src/theme.scss
@@ -58,8 +58,8 @@
     --primary-1-sub: #FFA59F;
     --primary-1-sub-rgb: 255, 165, 159;
 
-    --primary-2-sub: #A6DDDF;
-    --primary-2-sub-rgb: 166, 221, 223;
+    --primary-2-sub: #05777B;
+    --primary-2-sub-rgb: 5, 119, 123;
 
     --contrast: #FFFFFF;
     --contrast-rgb: 255, 255, 255;
