--- a/frontend/src/app/pages/start/start.page.html
+++ b/frontend/src/app/pages/start/start.page.html
@@ -1,11 +1,44 @@
-<h1>Hallo!</h1>
+<div class="banner-container">
+  <div class="banner">
+    <img src="/assets/images/banner.jpg" width="100%"/>
+  </div>
+</div>
+
+<h1>Willkommen bei Kicherkrabbe!</h1>
+
+<div class="column-layout">
+  <div class="left">
+    <p>
+      Hallo, ich bin Jenny, der kreative Kopf hinter Kicherkrabbe. Seit 2015 nähe ich leidenschaftlich gern, doch erst
+      durch
+      meine Schwangerschaft wurde das Nähen zu meinem liebsten
+      Hobby. Während meiner Elternzeit habe ich mich intensiv weitergebildet, um die Qualität meiner Arbeiten
+      kontinuierlich
+      zu verbessern.
+    </p>
+    <p>
+      Anfang 2024 habe ich schließlich den Schritt gewagt und mein Kleingewerbe angemeldet.
+      Unter diesem Namen nähe ich nun verschiedene Kleidung für Babys und Kinder in den <strong>Größen 56 - 116</strong>.
+      Falls deine Wunschgröße, Stoff oder Schnitt nicht dabei ist, schreibe mir gerne und wir finden gemeinsam eine
+      Lösung.
+    </p>
+    <p>
+      Nach langer Suche nach der perfekten Druckerei in <strong>Deutschland</strong> lasse ich meine Motivstoffe auf
+      <strong>Bio-Stoffen</strong> produzieren.
+      Mittlerweile hat sich eine große Auswahl an verschiedenen Designs angesammelt.
+      Schau dich doch gerne <a href="/catalog/fabrics">hier</a> um. Bestimmt findest du den perfekten Stoff für dein
+      Unikat.
+    </p>
+  </div>
+  <div class="right">
+    <img src="/assets/images/jenny.jpg" width="100%"/>
+  </div>
+</div>
+
+<hr>
 
 <p>
-  Der Webauftritt befindet sich noch in der Entstehung - schau bald wieder vorbei!
-</p>
-
-<p>
-  Aktuell findest du <a href="/catalog/patterns">hier</a> bereits die angebotenen Schnitte und Preise dazu.
-  Wenn dich etwas interessiert schreibe mich gerne auf <a href="https://www.instagram.com/kicherkrabbe" target="_blank">Instagram</a>
-  oder per Mail an.
+  Du findest mich auch auf <a href="https://www.instagram.com/kicherkrabbe" target="_blank">Instagram</a> und kannst dir
+  dort meine bisherigen Werke ansehen und mich kontaktieren. Alternativ schreibe mir gerne eine <a
+  href="mailto:info@kicherkrabbe.com">Mail</a> an <i>info&commat;kicherkrabbe.com</i>
 </p>
