--- a/frontend/src/app/modules/shared/components/file-select/file-select.component.html
+++ b/frontend/src/app/modules/shared/components/file-select/file-select.component.html
@@ -3,7 +3,7 @@
      (drop)="onDrop($event)"
      (dragleave)="onDragLeave($event)">
   <div class="ordinary-content" [class.hidden]="isDroppable() | async">
-    <input #file type="file" class="display-none" [accept]="accept">
+    <input #file type="file" class="display-none" [accept]="accept" [multiple]="multiple">
     <app-button (click)="openFilePicker(file)">{{ label }} Auswählen</app-button>
     <span>oder {{ label }} hier ablegen</span>
   </div>
