--- a/frontend/src/theme.scss
+++ b/frontend/src/theme.scss
@@ -58,7 +58,7 @@
     --primary-1-sub: #FFA59F;
     --primary-1-sub-rgb: 255, 165, 159;
 
-    --primary-2-sub: #05777B;
+    --primary-2-sub: #12D2D9;
     --primary-2-sub-rgb: 5, 119, 123;
 
     --contrast: #FFFFFF;
