--- a/frontend/src/app/components/footer/footer.component.html
+++ b/frontend/src/app/components/footer/footer.component.html
@@ -1,5 +1,5 @@
 <div class="content">
-  <div class="logo">
+  <div class="logo" (click)="incrementShowHiddenThingsCounter()">
     <img *ngIf="isDarkMode() | async" src="/assets/kicherkrabbe_outlines_white.svg" width="128">
     <img *ngIf="isLightMode() | async" src="/assets/kicherkrabbe_outlines_black.svg" width="128">
   </div>
@@ -21,4 +21,13 @@
       <li><a routerLink="/legal/cancellation-policy">Widerrufsbelehrung</a></li>
     </ul>
   </div>
+
+  @if (showHiddenThings$ | async) {
+    <div class="admin">
+      <div class="navigation-title">Verwaltung</div>
+      <ul class="navigation">
+        <li><a routerLink="/admin/login">Anmelden</a></li>
+      </ul>
+    </div>
+  }
 </div>
