Categories management in frontend WiP

--- a/frontend/src/app/components/footer/footer.component.html
+++ b/frontend/src/app/components/footer/footer.component.html
@@ -26,7 +26,7 @@
     <div class="admin">
       <div class="navigation-title">Verwaltung</div>
       <ul class="navigation">
-        <li><a routerLink="/admin/login">Anmelden</a></li>
+        <li><a routerLink="/admin">Zur Verwaltung</a></li>
       </ul>
     </div>
   }
