--- a/frontend/src/app/modules/admin/modules/patterns/pages/patterns/patterns.page.scss
+++ b/frontend/src/app/modules/admin/modules/patterns/pages/patterns/patterns.page.scss
@@ -9,3 +9,16 @@
   gap: 12px;
   margin-bottom: 8px;
 }
+
+@media only screen and (max-width: 1000px) {
+  .action-bar {
+    flex-direction: column;
+    justify-content: stretch;
+    align-items: flex-start;
+
+    input {
+      width: 100%;
+      box-sizing: border-box;
+    }
+  }
+}
