Finished categories management

--- a/frontend/src/app/modules/admin/modules/categories/pages/categories/categories.page.html
+++ b/frontend/src/app/modules/admin/modules/categories/pages/categories/categories.page.html
@@ -11,7 +11,7 @@
 
     <div header class="dropdown-header">
       <app-button-column [rounded]="false">
-        <app-button (click)="groupDropdown.clearSelection()">Zurücksetzen</app-button>
+        <app-button (click)="clearGroupSelection(groupDropdown)">Zurücksetzen</app-button>
       </app-button-column>
     </div>
   </app-dropdown>
