--- a/frontend/src/app/modules/admin/modules/patterns/pages/patterns/patterns.page.html
+++ b/frontend/src/app/modules/admin/modules/patterns/pages/patterns/patterns.page.html
@@ -1,5 +1,26 @@
 <div class="action-bar">
   <input #search type="text" placeholder="Suchen..." (input)="updateSearch(search.value)"/>
+  <app-dropdown #categoriesDropdown
+                label="Kategorien"
+                [items]="categoriesDropdownItems$ | async"
+                [showSelectionIndicator]="true"
+                [multiple]="true"
+                (selectionChanged)="updateSelectedCategories($event)">
+    <ng-template let-item>
+      <span>{{ item.label }}</span>
+    </ng-template>
+
+    <div header class="dropdown-header">
+      <app-button-column [rounded]="false">
+        <app-button (click)="clearSelectedCategories(categoriesDropdown)">Zurücksetzen</app-button>
+      </app-button-column>
+    </div>
+    <div footer class="dropdown-footer">
+      <app-button-column [rounded]="false">
+        <app-button (click)="categoriesDropdown.toggleOpened()">Fertig</app-button>
+      </app-button-column>
+    </div>
+  </app-dropdown>
   <app-button routerLink="create">
     <span class="icon-button">
       <span class="material-icons">add</span>
@@ -11,3 +32,29 @@
 </div>
 
 <app-loading-bar [visible]="loading$ | async"></app-loading-bar>
+
+@if (notLoading$ | async) {
+  @if (patterns$ | async; as patterns) {
+    @if (patterns.length === 0) {
+      <app-note level="info">Es konnten keine Schnittmuster gefunden werden.</app-note>
+    } @else {
+      <ul class="patterns-list">
+        @for (pattern of patterns; track pattern.id) {
+          <li [routerLink]="pattern.id">
+          <span class="details">
+            <span class="name">
+              {{ pattern.name }}
+              @for (category of pattern.categories; track category) {
+                <span class="category-badge">{{ getCategoryLabel(category) | async }}</span>
+              }
+            </span>
+            <span class="created-at">
+              Erstellt am {{ pattern.createdAt | date: 'dd.MM.yyyy' }} um {{ pattern.createdAt | date: 'HH:mm' }} Uhr
+            </span>
+          </span>
+          </li>
+        }
+      </ul>
+    }
+  }
+}
